--- a/main.html
+++ b/main.html
@@ -10,6 +10,30 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<header>
+		<h1>Shaw's News</h1>
+	</header>
+	<div class="container">
+		<div class="latest-news-section">
+			<h3>Latest News Articles</h3>
+			<ul>
+				<li>Article1</li>
+				<li>Article2</li>
+				<li>Article3</li>
+			</ul>
+		</div>
+		<div class="hero-section">
+			<h3>Main Article</h3>
+			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates asperiores sint numquam blanditiis dicta similique alias itaque illum sunt autem vel corrupti vero, tempore laudantium et eligendi maiores soluta dolorem!
+                 Magnam ratione quam similique pariatur id. Modi tempora tempore accusantium neque error. Aperiam, voluptatum! Atque, vel. Asperiores excepturi suscipit nobis libero doloribus dolore eveniet, minima illo mollitia velit magni quae.</p>
+		</div>
+		<div class="Pictorial-News">
+			<h3>Pictorial News</h3>
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="image">
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="image">
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="image">
+		</div>
+	</div>
 
 </body>
 
